--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "/" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/sito" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 title: "Monserrat Olavarria" # the name of your site, e.g. ACME Corp.
 lang: "it-IT"
 copyright: "/copyright/"
